src/zeus/concepts/RestrictionParser.java
/*
* The contents of this file are subject to the BT "ZEUS" Open Source 
* Licence (L77741), Version 1.0 (the "Licence"); you may not use this file 
* except in compliance with the Licence. You may obtain a copy of the Licence
* from $ZEUS_INSTALL/licence.html or alternatively from
* http://www.labs.bt.com/projects/agents/zeus/licence.htm
* 
* Except as stated in Clause 7 of the Licence, software distributed under the
* Licence is distributed WITHOUT WARRANTY OF ANY KIND, either express or 
* implied. See the Licence for the specific language governing rights and 
* limitations under the Licence.
* 
* The Original Code is within the package zeus.*.
* The Initial Developer of the Original Code is British Telecommunications
* public limited company, whose registered office is at 81 Newgate Street, 
* London, EC1A 7AJ, England. Portions created by British Telecommunications 
* public limited company are Copyright 1996-9. All Rights Reserved.
* 
* THIS NOTICE MUST BE INCLUDED ON ANY COPY OF THIS FILE
*/



/* Generated By:JavaCC: Do not edit this line. RestrictionParser.java */
package zeus.concepts;

import java.util.*;
import java.io.*;
import zeus.util.*;
import zeus.concepts.fn.*;

public class RestrictionParser implements RestrictionParserConstants {

/*
   String Expression syntax follows.
*/
  final public ValueFunction StringExpression() throws ParseException {
  ValueFunction fn = null;
    fn = OrString();
    jj_consume_token(0);
    {if (true) return fn;}
    throw new Error("Missing return statement in function");
  }

  final public ValueFunction OrString() throws ParseException {
  ValueFunction x, y;
    x = AndString();
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case UOR:
        ;
        break;
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      jj_consume_token(UOR);
      y = AndString();
        x =  new OrFn(x,y);
    }
    {if (true) return x;}
    throw new Error("Missing return statement in function");
  }

  final public ValueFunction AndString() throws ParseException {
  ValueFunction x, y;
    x = UnaryString();
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case UAND:
        ;
        break;
      default:
        jj_la1[1] = jj_gen;
        break label_2;
      }
      jj_consume_token(UAND);
      y = UnaryString();
        x = new AndFn(x,y);
    }
    {if (true) return x;}
    throw new Error("Missing return statement in function");
  }

  final public ValueFunction UnaryString() throws ParseException {
  Token t;
  ValueFunction x;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case LE:
    case GE:
    case NE:
    case GT:
    case LT:
    case UNOT:
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LE:
        t = jj_consume_token(LE);
        break;
      case GE:
        t = jj_consume_token(GE);
        break;
      case NE:
        t = jj_consume_token(NE);
        break;
      case GT:
        t = jj_consume_token(GT);
        break;
      case LT:
        t = jj_consume_token(LT);
        break;
      case UNOT:
        t = jj_consume_token(UNOT);
        break;
      default:
        jj_la1[2] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      x = UnaryString();
     x = new ConstraintFn(t.image,x);
      break;
    case ID:
    case LITERAL:
      x = StringLiteral();
      break;
    case LBRACKET:
      jj_consume_token(LBRACKET);
      x = OrString();
      jj_consume_token(RBRACKET);
      break;
    default:
      jj_la1[3] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    {if (true) return x;}
    throw new Error("Missing return statement in function");
  }

  final public ValueFunction StringLiteral() throws ParseException {
  Token t;
  ValueFunction x = null;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case LITERAL:
      t = jj_consume_token(LITERAL);
     x = new IdFn(Misc.literalToString(t.image));
      break;
    default:
      jj_la1[4] = jj_gen;
      if (jj_2_1(2)) {
        x = Function();
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case ID:
          t = jj_consume_token(ID);
     x = new IdFn(t.image);
          break;
        default:
          jj_la1[5] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    }
    {if (true) return x;}
    throw new Error("Missing return statement in function");
  }

/*
   Boolean Expression syntax follows.
*/
  final public ValueFunction BooleanLiteral() throws ParseException {
  Token t;
  ValueFunction x = null;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case BOOLEAN:
      t = jj_consume_token(BOOLEAN);
    x = BoolFn.newBoolFn(t.image);
      break;
    case ID:
      x = Function();
      break;
    default:
      jj_la1[6] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    {if (true) return x;}
    throw new Error("Missing return statement in function");
  }

/*
   Date Expression syntax follows.
*/
  final public ValueFunction DateExpression() throws ParseException {
  ValueFunction x = null;
    x = OrDate();
    jj_consume_token(0);
    {if (true) return x;}
    throw new Error("Missing return statement in function");
  }

  final public ValueFunction OrDate() throws ParseException {
  ValueFunction x = null, y = null;
    x = AndDate();
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case UOR:
        ;
        break;
      default:
        jj_la1[7] = jj_gen;
        break label_3;
      }
      jj_consume_token(UOR);
      y = AndDate();
        x = new OrFn(x,y);
    }
     {if (true) return x;}
    throw new Error("Missing return statement in function");
  }

  final public ValueFunction AndDate() throws ParseException {
  ValueFunction x = null, y = null;
    x = UnaryDate();
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case UAND:
        ;
        break;
      default:
        jj_la1[8] = jj_gen;
        break label_4;
      }
      jj_consume_token(UAND);
      y = UnaryDate();
        x = new AndFn(x,y);
    }
     {if (true) return x;}
    throw new Error("Missing return statement in function");
  }

  final public ValueFunction UnaryDate() throws ParseException {
  Token t;
  ValueFunction x = null;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case LE:
    case GE:
    case NE:
    case GT:
    case LT:
    case UNOT:
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LE:
        t = jj_consume_token(LE);
        break;
      case GE:
        t = jj_consume_token(GE);
        break;
      case NE:
        t = jj_consume_token(NE);
        break;
      case GT:
        t = jj_consume_token(GT);
        break;
      case LT:
        t = jj_consume_token(LT);
        break;
      case UNOT:
        t = jj_consume_token(UNOT);
        break;
      default:
        jj_la1[9] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      x = UnaryDate();
     x =  new ConstraintFn(t.image,x);
      break;
    case ID:
    case DATE:
      x = DateLiteral();
      break;
    case LBRACKET:
      jj_consume_token(LBRACKET);
      x = OrDate();
      jj_consume_token(RBRACKET);
      break;
    default:
      jj_la1[10] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    {if (true) return x;}
    throw new Error("Missing return statement in function");
  }

  final public ValueFunction DateLiteral() throws ParseException {
  Token t;
  ValueFunction x = null;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case DATE:
      t = jj_consume_token(DATE);
     x = new DateFn(t.image);
      break;
    case ID:
      x = Function();
      break;
    default:
      jj_la1[11] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    {if (true) return x;}
    throw new Error("Missing return statement in function");
  }

/*
   Time Expression syntax follows.
*/
  final public ValueFunction TimeExpression() throws ParseException {
  ValueFunction x = null;
    x = OrTime();
    jj_consume_token(0);
    {if (true) return x;}
    throw new Error("Missing return statement in function");
  }

  final public ValueFunction OrTime() throws ParseException {
  ValueFunction x = null, y = null;
    x = AndTime();
    label_5:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case UOR:
        ;
        break;
      default:
        jj_la1[12] = jj_gen;
        break label_5;
      }
      jj_consume_token(UOR);
      y = AndTime();
        x = new OrFn(x,y);
    }
    {if (true) return x;}
    throw new Error("Missing return statement in function");
  }

  final public ValueFunction AndTime() throws ParseException {
  ValueFunction x = null, y = null;
    x = UnaryTime();
    label_6:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case UAND:
        ;
        break;
      default:
        jj_la1[13] = jj_gen;
        break label_6;
      }
      jj_consume_token(UAND);
      y = UnaryTime();
        x = new AndFn(x,y);
    }
    {if (true) return x;}
    throw new Error("Missing return statement in function");
  }

  final public ValueFunction UnaryTime() throws ParseException {
  Token t;
  ValueFunction x = null, y = null;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case LE:
    case GE:
    case NE:
    case GT:
    case LT:
    case UNOT:
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LE:
        t = jj_consume_token(LE);
        break;
      case GE:
        t = jj_consume_token(GE);
        break;
      case NE:
        t = jj_consume_token(NE);
        break;
      case GT:
        t = jj_consume_token(GT);
        break;
      case LT:
        t = jj_consume_token(LT);
        break;
      case UNOT:
        t = jj_consume_token(UNOT);
        break;
      default:
        jj_la1[14] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      x = UnaryTime();
     x =  new ConstraintFn(t.image,x);
      break;
    case ID:
    case TIME:
      x = TimeLiteral();
      break;
    case LBRACKET:
      jj_consume_token(LBRACKET);
      x = OrTime();
      jj_consume_token(RBRACKET);
      break;
    default:
      jj_la1[15] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    {if (true) return x;}
    throw new Error("Missing return statement in function");
  }

  final public ValueFunction TimeLiteral() throws ParseException {
  Token t;
  ValueFunction x = null;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case TIME:
      t = jj_consume_token(TIME);
     x = new TimeFn(t.image);
      break;
    case ID:
      x = Function();
      break;
    default:
      jj_la1[16] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    {if (true) return x;}
    throw new Error("Missing return statement in function");
  }

/*
   Integer Expression syntax follows.
*/
  final public ValueFunction IntegerExpression() throws ParseException {
  ValueFunction x = null;
    x = OrInteger();
    jj_consume_token(0);
     {if (true) return x;}
    throw new Error("Missing return statement in function");
  }

  final public ValueFunction OrInteger() throws ParseException {
  ValueFunction x = null, y = null;
    x = AndInteger();
    label_7:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case UOR:
        ;
        break;
      default:
        jj_la1[17] = jj_gen;
        break label_7;
      }
      jj_consume_token(UOR);
      y = AndInteger();
        x = new OrFn(x,y);
    }
     {if (true) return x;}
    throw new Error("Missing return statement in function");
  }

  final public ValueFunction AndInteger() throws ParseException {
  ValueFunction x = null, y = null;
    x = AdditiveInteger();
    label_8:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case UAND:
        ;
        break;
      default:
        jj_la1[18] = jj_gen;
        break label_8;
      }
      jj_consume_token(UAND);
      y = AdditiveInteger();
        x = new AndFn(x,y);
    }
     {if (true) return x;}
    throw new Error("Missing return statement in function");
  }

  final public ValueFunction AdditiveInteger() throws ParseException {
  Token t;
  ValueFunction x = null, y = null;
    x = MultiplicativeInteger();
    label_9:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PLUS:
      case MINUS:
        ;
        break;
      default:
        jj_la1[19] = jj_gen;
        break label_9;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PLUS:
        t = jj_consume_token(PLUS);
        break;
      case MINUS:
        t = jj_consume_token(MINUS);
        break;
      default:
        jj_la1[20] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      y = MultiplicativeInteger();
        x = new ArithmeticFn(x,y,t.image);
    }
    {if (true) return x;}
    throw new Error("Missing return statement in function");
  }

  final public ValueFunction MultiplicativeInteger() throws ParseException {
  Token t;
  ValueFunction x = null, y = null;
    x = UnaryInteger();
    label_10:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case MULTIPLY:
      case DIVIDE:
      case REMAINDER:
        ;
        break;
      default:
        jj_la1[21] = jj_gen;
        break label_10;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case MULTIPLY:
        t = jj_consume_token(MULTIPLY);
        break;
      case DIVIDE:
        t = jj_consume_token(DIVIDE);
        break;
      case REMAINDER:
        t = jj_consume_token(REMAINDER);
        break;
      default:
        jj_la1[22] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      y = UnaryInteger();
        x = new ArithmeticFn(x,y,t.image);
    }
    {if (true) return x;}
    throw new Error("Missing return statement in function");
  }

  final public ValueFunction UnaryInteger() throws ParseException {
  Token t;
  ValueFunction x = null;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case PLUS:
    case MINUS:
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PLUS:
        t = jj_consume_token(PLUS);
        break;
      case MINUS:
        t = jj_consume_token(MINUS);
        break;
      default:
        jj_la1[23] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      x = UnaryInteger();
     x =  new ArithmeticFn(new IntFn("0"),x,t.image);
      break;
    case LE:
    case GE:
    case NE:
    case GT:
    case LT:
    case UNOT:
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LE:
        t = jj_consume_token(LE);
        break;
      case GE:
        t = jj_consume_token(GE);
        break;
      case NE:
        t = jj_consume_token(NE);
        break;
      case GT:
        t = jj_consume_token(GT);
        break;
      case LT:
        t = jj_consume_token(LT);
        break;
      case UNOT:
        t = jj_consume_token(UNOT);
        break;
      default:
        jj_la1[24] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      x = UnaryInteger();
     x =  new ConstraintFn(t.image,x);
      break;
    case INTEGER:
      t = jj_consume_token(INTEGER);
     x = new IntFn(t.image);
      break;
    case LBRACKET:
      jj_consume_token(LBRACKET);
      x = OrInteger();
      jj_consume_token(RBRACKET);
      break;
    case ID:
      x = Function();
      break;
    default:
      jj_la1[25] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    {if (true) return x;}
    throw new Error("Missing return statement in function");
  }

/*
   Real Expression syntax follows.
*/
  final public ValueFunction RealExpression() throws ParseException {
  ValueFunction x = null, y = null;
    x = OrReal();
    jj_consume_token(0);
     {if (true) return x;}
    throw new Error("Missing return statement in function");
  }

  final public ValueFunction OrReal() throws ParseException {
  ValueFunction x = null, y = null;
    x = AndReal();
    label_11:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case UOR:
        ;
        break;
      default:
        jj_la1[26] = jj_gen;
        break label_11;
      }
      jj_consume_token(UOR);
      y = AndReal();
        x = new OrFn(x,y);
    }
     {if (true) return x;}
    throw new Error("Missing return statement in function");
  }

  final public ValueFunction AndReal() throws ParseException {
  ValueFunction x = null, y = null;
    x = AdditiveReal();
    label_12:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case UAND:
        ;
        break;
      default:
        jj_la1[27] = jj_gen;
        break label_12;
      }
      jj_consume_token(UAND);
      y = AdditiveReal();
        x = new AndFn(x,y);
    }
     {if (true) return x;}
    throw new Error("Missing return statement in function");
  }

  final public ValueFunction AdditiveReal() throws ParseException {
  Token t;
  ValueFunction x = null, y = null;
    x = MultiplicativeReal();
    label_13:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PLUS:
      case MINUS:
        ;
        break;
      default:
        jj_la1[28] = jj_gen;
        break label_13;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PLUS:
        t = jj_consume_token(PLUS);
        break;
      case MINUS:
        t = jj_consume_token(MINUS);
        break;
      default:
        jj_la1[29] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      y = MultiplicativeReal();
        x = new ArithmeticFn(x,y,t.image);
    }
     {if (true) return x;}
    throw new Error("Missing return statement in function");
  }
